...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oRv-wC-fYL">
                                <rect key="frame" x="81" y="280" width="213" height="30"/>
                                <state key="normal" title="Schedule alerts on main thread"/>
                                <connections>
                                    <action selector="scheduleAlertsOnMainThread:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hwt-Wg-XV3"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3kO-jy-3vf">
                                <rect key="frame" x="80" y="318" width="215" height="30"/>
...
